--- a/src/index.html
+++ b/src/index.html
@@ -18,10 +18,9 @@
     <!-- Import and play BVH -->
     <script type="module">
       import { initBvh, loadGLTF, animate } from "./js/main.js";
-      window.initBvh = initBvh;
-      window.loadGLTF = loadGLTF;
-      window.animate = animate;
-      document.body.innerHTML = loadGLTF();
+      initBvh();
+      loadGLTF();
+      animate();
     </script>
   </body>
 </html>
